@@ -1,6 +1,0 @@
-Someone, hopefully you, signed up for a new account at {{ site }} using this email address. If it was you, and you'd like to activate and use your account, click the link below or copy and paste it into your web browser's address bar:
-
-http://{{ site }}/accounts/activate/{{ activation_key }}/
-
-If you didn't request this, you don't need to do anything; you won't receive any more email from us, and the account will expire automatically in {{ expiration_days }} days.
-
